@@ -723,7 +723,23 @@ create_job_step(srun_job_t *job, bool use_all_cpus)
 	totalview_jobid = NULL;
 	xstrfmtcat(totalview_jobid, "%u", job->ctx_params.job_id);
 
-	job->ctx_params.node_count = job->nhosts;
+	/* Validate minimum and maximum node counts */
+	if (opt.min_nodes && opt.max_nodes &&
+	    (opt.min_nodes > opt.max_nodes)) {
+		error ("Minimum node count > maximum node count");
+		return -1;
+	}
+	if (opt.min_nodes && (opt.min_nodes > job->nhosts)) {
+		error ("Minimum node count > allocated node count");
+		return -1;
+	}
+	job->ctx_params.min_nodes = job->nhosts;
+	if (opt.min_nodes && (opt.min_nodes < job->ctx_params.min_nodes))
+		job->ctx_params.min_nodes = opt.min_nodes;
+	job->ctx_params.max_nodes = job->nhosts;
+	if (opt.max_nodes && (opt.max_nodes < job->ctx_params.max_nodes))
+		job->ctx_params.max_nodes = opt.max_nodes;
+
 	if (!opt.nprocs_set && (opt.ntasks_per_node != NO_VAL))
 		job->ntasks = opt.nprocs = job->nhosts * opt.ntasks_per_node;
 	job->ctx_params.task_count = opt.nprocs;
@@ -734,7 +750,7 @@ create_job_step(srun_job_t *job, bool use_all_cpus)
 	if (use_all_cpus)
 		job->ctx_params.cpu_count = job->cpu_count;
 	else if (opt.overcommit)
-		job->ctx_params.cpu_count = job->ctx_params.node_count;
+		job->ctx_params.cpu_count = job->ctx_params.min_nodes;
 	else
 		job->ctx_params.cpu_count = opt.nprocs*opt.cpus_per_task;
 
@@ -766,7 +782,7 @@ create_job_step(srun_job_t *job, bool use_all_cpus)
 		break;
 	default:
 		job->ctx_params.task_dist = (job->ctx_params.task_count <=
-					     job->ctx_params.node_count)
+					     job->ctx_params.min_nodes)
 			? SLURM_DIST_CYCLIC : SLURM_DIST_BLOCK;
 		opt.distribution = job->ctx_params.task_dist;
 		break;
@@ -785,7 +801,7 @@ create_job_step(srun_job_t *job, bool use_all_cpus)
 
 	debug("requesting job %u, user %u, nodes %u including (%s)",
 	      job->ctx_params.job_id, job->ctx_params.uid,
-	      job->ctx_params.node_count, job->ctx_params.node_list);
+	      job->ctx_params.min_nodes, job->ctx_params.node_list);
 	debug("cpus %u, tasks %u, name %s, relative %u",
 	      job->ctx_params.cpu_count, job->ctx_params.task_count,
 	      job->ctx_params.name, job->ctx_params.relative);
