@@ -12,6 +12,7 @@ documents those changes that are of interest to users and admins.
  -- Altered srun to set max_nodes to min_nodes if not set when doing an
     allocation to mimic that which salloc and sbatch do.  If running a step if
     the max isn't set it remains unset.
+ -- Add support for maximum node count in job step request.
 
 * Changes in SLURM 2.2.0.pre3
 =============================
